Add JVM args for running on Java 16
Works out of the box for both userdev and installed clients

Signed-off-by: SizableShrimp <sizableshrimp@sizableshrimp.me>